fixed not showing contact header

--- a/responsive_detail_product.css
+++ b/responsive_detail_product.css
@@ -33,8 +33,8 @@
     }
     
     header .header-menu li{
-        margin-right: 30px;
-        margin-left: 30px;
+        margin-right: 20px;
+        margin-left: 20px;
         line-height: 70px;
         color: white;
     }
